--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "scripts": {
     "prepare": "husky install",
     "build": "tsc -p tsconfig.build.json",
+    "build:tests": "tsc -p tsconfig.json",
     "clean": "rimraf lib",
     "start": "ts-node-esm src/index.ts",
     "test": "vitest run",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint \"src/**/*.ts\" --fix"
+    "format": "prettier --write \"{src,test}/**/*.ts\" \".*.{json,cjs,ts}\" ",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.5.1",
@@ -34,18 +35,22 @@
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@vitest/coverage-c8": "^0.29.8",
-    "eslint": "^8.37.0",
+    "@vitest/coverage-c8": "^0.30.0",
+    "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-file-extension-in-import-ts": "^1.0.2",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-unicorn": "^46.0.0",
     "http-status": "^1.6.2",
     "husky": "^8.0.3",
     "jest-extended": "^3.2.4",
     "prettier": "^2.8.7",
     "semantic-release": "^21.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3",
-    "vitest": "^0.29.8"
+    "typescript": "^5.0.4",
+    "vitest": "^0.30.0"
   },
   "release": {
     "branches": [
@@ -63,6 +68,6 @@
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
     "zod": "^3.21.4",
-    "zod-validation-error": "^1.2.1"
+    "zod-validation-error": "^1.3.0"
   }
 }
