--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "http-status": "^1.6.2",
     "husky": "^8.0.3",
     "jest-extended": "^3.2.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
     "semantic-release": "^21.0.1",
     "ts-node": "^10.9.1",
