--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unicorn": "^46.0.0",
+    "expect-http-client-matchers": "^2.2.0",
     "http-status": "^1.6.2",
     "husky": "^8.0.3",
     "jest-extended": "^3.2.4",
