style: change from prettier and eslint to biome

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,8 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Format
-        run: npm run format
-
-      - name: Lint
-        run: npm run lint
+      - name: Format & Lint
+        run: npm run check
 
       - name: Test
         run: npm test
