--- a/package.json
+++ b/package.json
@@ -2,19 +2,8 @@
   "name": "node-boilerplate",
   "version": "0.0.0-development",
   "description": "NodeJS boilerplate with TypeScript, Jest, ESLint, Prettier, Husky, CommitLint, CI in GitHub Action",
-  "keywords": [
-    "boilerplate",
-    "prettier",
-    "eslint",
-    "husky",
-    "commitlint",
-    "typescript",
-    "fastify",
-    "vitest"
-  ],
-  "files": [
-    "lib"
-  ],
+  "keywords": ["boilerplate", "prettier", "eslint", "husky", "commitlint", "typescript", "fastify", "vitest"],
+  "files": ["lib"],
   "type": "module",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -25,39 +14,28 @@
     "clean": "rimraf lib",
     "start": "ts-node-esm src/index.ts",
     "test": "vitest run",
-    "format": "prettier --write \"{src,test}/**/*.ts\" \".*.{json,cjs,ts}\" ",
-    "lint": "eslint \"{src,test}/**/*.ts\" --fix"
+    "check": "biome check .",
+    "check:apply": "biome check --write ."
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.2",
     "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.4",
     "@faker-js/faker": "^7.6.0",
     "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
     "@vitest/coverage-c8": "^0.30.0",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-file-extension-in-import-ts": "^1.0.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unicorn": "^46.0.0",
     "expect-http-client-matchers": "^2.2.0",
     "http-status": "^1.6.2",
     "husky": "^8.0.3",
     "jest-extended": "^3.2.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.7",
     "semantic-release": "^21.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vitest": "^0.30.0"
   },
   "release": {
-    "branches": [
-      "main"
-    ]
+    "branches": ["main"]
   },
   "repository": {
     "type": "git",
