--- a/package.json
+++ b/package.json
@@ -19,20 +19,19 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.2",
-    "@commitlint/cli": "^17.5.1",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@faker-js/faker": "^7.6.0",
-    "@types/node": "^18.15.11",
-    "@vitest/coverage-c8": "^0.30.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@faker-js/faker": "^10.0.0",
+    "@types/node": "^24.3.0",
     "expect-http-client-matchers": "^2.2.0",
-    "http-status": "^1.6.2",
-    "husky": "^8.0.3",
-    "jest-extended": "^3.2.4",
+    "http-status": "^2.1.0",
+    "husky": "^9.1.7",
+    "jest-extended": "^6.0.0",
     "npm-run-all": "^4.1.5",
-    "semantic-release": "^21.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "vitest": "^0.30.0"
+    "semantic-release": "^24.2.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "release": {
     "branches": ["main"]
@@ -42,12 +41,13 @@
     "url": "https://github.com/rluvaton/node-boilerplate.git"
   },
   "dependencies": {
-    "axios": "^1.3.5",
-    "fastify": "^4.15.0",
-    "fastify-plugin": "^4.5.0",
-    "pino": "^8.11.0",
-    "pino-pretty": "^10.0.0",
-    "zod": "^3.21.4",
-    "zod-validation-error": "^1.3.0"
+    "axios": "^1.11.0",
+    "fastify": "^5.5.0",
+    "fastify-plugin": "^5.0.1",
+    "npm-check-updates": "^18.0.2",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
+    "zod": "^4.1.1",
+    "zod-validation-error": "^4.0.1"
   }
 }
