--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
+    "allowImportingTsExtensions": true,
     "types": ["vitest/globals"]
   },
   "include": ["src", "test", "typings"],
