--- a/package.json
+++ b/package.json
@@ -2,19 +2,8 @@
   "name": "node-boilerplate",
   "version": "0.0.0-development",
   "description": "NodeJS boilerplate with TypeScript, Jest, ESLint, Prettier, Husky, CommitLint, CI in GitHub Action",
-  "keywords": [
-    "boilerplate",
-    "prettier",
-    "eslint",
-    "husky",
-    "commitlint",
-    "typescript",
-    "fastify",
-    "vitest"
-  ],
-  "files": [
-    "lib"
-  ],
+  "keywords": ["boilerplate", "prettier", "eslint", "husky", "commitlint", "typescript", "fastify", "vitest"],
+  "files": ["lib"],
   "type": "module",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -55,9 +44,7 @@
     "vitest": "^3.2.4"
   },
   "release": {
-    "branches": [
-      "main"
-    ]
+    "branches": ["main"]
   },
   "repository": {
     "type": "git",
