test: moved to mocha (#1)
Decided to move to mocha as it is simpler and no magin.

Not using `node:tests` as it is still does not allow for config file and
easy test lifecycle management

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
-    "types": ["vitest/globals"]
+    "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true
   },
   "include": ["src", "test", "typings"],
-  "files": ["vitest.d.ts"],
+  "files": ["./typings/global.d.ts", "./typings/reset.d.ts"],
   "exclude": ["node_modules", "dist"],
   "ts-node": {
     "esm": true
