--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:tests": "tsc -p tsconfig.json",
     "clean": "rimraf lib",
     "start": "ts-node-esm src/index.ts",
-    "test": "vitest run",
+    "test": "mocha",
     "check": "biome check .",
     "check:apply": "biome check --write ."
   },
@@ -22,16 +22,25 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@faker-js/faker": "^10.0.0",
+    "@total-typescript/ts-reset": "^0.6.1",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^24.3.0",
+    "@types/sinon": "^10.0.13",
+    "execa": "^9.6.0",
     "expect-http-client-matchers": "^2.2.0",
+    "expect-matchers": "^1.2.0",
     "http-status": "^2.1.0",
     "husky": "^9.1.7",
+    "is-port-reachable": "^4.0.0",
+    "jest-each": "^30.1.0",
     "jest-extended": "^6.0.0",
+    "mocha": "^10.1.0",
     "npm-run-all": "^4.1.5",
     "semantic-release": "^24.2.7",
+    "sinon": "^17.0.1",
+    "sinon-jest-matchers": "^1.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "typescript": "^5.9.2"
   },
   "release": {
     "branches": ["main"]
