--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsc -p tsconfig.build.json",
     "build:tests": "tsc -p tsconfig.json",
     "clean": "rimraf lib",
-    "start": "ts-node-esm src/index.ts",
+    "start": "tsx src/index.ts",
     "test": "mocha",
     "check": "biome check .",
     "check:apply": "biome check --write ."
@@ -39,7 +39,6 @@
     "semantic-release": "^24.2.7",
     "sinon": "^17.0.1",
     "sinon-jest-matchers": "^1.2.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "release": {
@@ -56,6 +55,7 @@
     "npm-check-updates": "^18.0.2",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
+    "tsx": "^4.20.5",
     "zod": "^4.1.1",
     "zod-validation-error": "^4.0.1"
   }
