--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,23 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
     "useIgnoreFile": false
   },
   "files": {
-    "ignoreUnknown": false
+    "ignoreUnknown": false,
+    "includes": [
+      "**",
+      "!**/dist",
+      "!**/coverage",
+      "!**/.vscode",
+      "!**/.idea",
+      "!**/.nyc_output",
+      "!**/.github",
+      "!**/node_modules",
+      "!**/package-lock.json"
+    ]
   },
   "formatter": {
     "enabled": true,
